# dinapy

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  setup.py  vcpkg.json
.github/workflows/: check-version.yml
cmake/: JSONParser.cmake  Packing.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  dina.cpp  dina.f90  dina.h
src/log/: CMakeLists.txt  logging.h
src/py/: CMakeLists.txt  dinapy.cpp
src/test/: CMakeLists.txt  test.cpp
